# MoSeS-LLEx

./: .gitignore  README.md  twinperipherals.code-workspace
3D_printing/STL/Central Unit/: Rpi-power-case.stl
3D_printing/STL/Crutches/: crutch_dome_UD.stl  crutch_dome_sleeve.stl
3D_printing/STL/Insoles/: Insole_L_L.stl  Insole_L_R.stl  Insole_M_L.stl  Insole_M_R.stl  Insole_S_L.stl  Insole_S_R.stl  README.rtf
StateMachine/: StateMachine_.cc  idf_component.yml
StateMachine/include/: StateMachine.h
app/: pubspec.yaml
app/lib/: main.dart  main.g.dart
blinkstickcpp-lib-0.2.1/src/: blinkstick.cc
central/: CMakeLists.txt  CmakePresets.json  Dockerfile  Makefile
central/example/: ble_ctrl.c  ble_ctrl.h  main.c
central/scripts/: install-pkgs.sh
components/ble/: CMakeLists.txt
components/error/: CMakeLists.txt
components/sense/: bno055.cpp
components/state_machine/: CMakeLists.txt
components/system/: CMakeLists.txt
noraxontrigger/: noraxontrigger.ino
shared-config/: ble.h
software/: README.md
software/StateMachine/: CMakeLists.txt  StateMachine.cpp
software/central/: CmakePresets.json  README.md  build.sh
software/experiment/calibrator/: pyproject.toml
software/experiment/calibrator/calibrator/: __init__.py
software/twininsoles/prototypes/ble/test/test_ble/: pyproject.toml
software/twininsoles/prototypes/ble/test/test_ble/data/: benchmark1_PRAS.csv  benchmark1_TJEY.csv
software/twininsoles/prototypes/ble/test/test_ble/test_ble/: benchmark.py  io.py
twincrutches/impl/: sdkconfig.old
twininsoles/impl/: sdkconfig
(+145 files in other folders)
