[tool.poetry]
name = "test-ble"
version = "0.1.0"
description = ""
authors = ["Ibrahima Kourouma <him.kourouma@hotmail.com>"]
readme = "README.md"
packages = [{include = "test_ble"}, {include = "test_ble/util"}]

[tool.poetry.scripts]
ble = "test_ble:start"

[tool.poetry.dependencies]
python = "^3.10"
bleak = "^0.19.5"
pexpect = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
